GNOME Bugzilla – Bug 702280
[abrt] gnome-shell-3.8.3-1.fc19: wrapped_gobj_toggle_notify: Process /usr/bin/gnome-shell was killed by signal 5 (SIGTRAP)
Last modified: 2017-01-23 04:34:25 UTC
From https://bugzilla.redhat.com/show_bug.cgi?id=974038 Kamil Páral 2013-06-13 06:37:32 EDT Description of problem: I just booted F19 TC3 Live x86_64 and this problem appeared, as notified by abrt. Version-Release number of selected component: gnome-shell-3.8.3-1.fc19 Additional info: reporter: libreport-2.1.4 backtrace_rating: 4 cmdline: /usr/bin/gnome-shell crash_function: wrapped_gobj_toggle_notify executable: /usr/bin/gnome-shell kernel: 3.9.4-301.fc19.x86_64 runlevel: N 5 uid: 1000 Truncated backtrace: Thread no. 1 (10 frames) #2 wrapped_gobj_toggle_notify at gi/object.c:1074 #3 gjs_g_arg_release_internal at gi/arg.c:2839 #4 gjs_invoke_c_function at gi/function.c:954 #5 function_call at gi/function.c:1202 #6 CallJSNative at jscntxtinlines.h:701 #7 js::Invoke at jsinterp.cpp:696 #8 js::Interpret at jsinterp.cpp:4810 #9 js::RunScript at jsinterp.cpp:653 #10 js::Invoke at jsinterp.cpp:740 #11 ExternalInvoke at jsinterp.cpp:863 [New LWP 1355] [New LWP 1382] [New LWP 1384] [New LWP 1385] [New LWP 1387] [New LWP 1388] [New LWP 1386] [New LWP 1403] warning: Could not load shared library symbols for /lib64/libgraphite2.so.3. Do you need "set solib-search-path" or "set sysroot"? [Thread debugging using libthread_db enabled] Using host libthread_db library "/lib64/libthread_db.so.1". Core was generated by `/usr/bin/gnome-shell'. Program terminated with signal 5, Trace/breakpoint trap.
+ Trace 232063
Thread 1 (Thread 0x7fe27b7e9a40 (LWP 1355))
Created attachment 246852 [details] [review] gi: potential patch a potential fix, but i haven't dug enough yet to figure out if it will work, or why it's needed.
The gc_blocked code has since been refactored out, so I'm assuming this doesn't happen anymore. The original bug has also been EOL'd. Please feel free to reopen if this pops up again.