gi: potential patch

a potential fix, but i haven't dug enough yet to figure out if it will
work, or why it's needed.

https://bugzilla.gnome.org/show_bug.cgi?id=702280